# helhug-types

./: .gitignore  LICENSE  Makefile  README.md  cabal.config  footer.html  header.html  helhug-types.cabal  pl.json
pl-scrapper/: .gitignore  README.md  scrap.js
src/HelHUG/: DB.hs  Part1.hs  Part1b.hs  Part2.hs  Part3.hs  Part3b.hs  Prologue.hs
src/HelHUG/DB/: Attribute.hs
