name:                helhug-types
version:             0.1.0.0
synopsis:            Source codes for Helsinki Haskell User Group meetup on 2015-03-04
description:         There is three parts and a prologue
license:             MIT
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          oleg.grenrus@iki.fi
copyright:           (c) 2015 Oleg Grenrus
category:            Talk
build-type:          Simple
extra-source-files:  README.md, pl.json
cabal-version:       >=1.10

library
  exposed-modules:     HelHUG.Prologue
                       HelHUG.Part1,
                       HelHUG.Part1b,
                       HelHUG.Part2,
                       HelHUG.Part3,
                       HelHUG.Part3b,
                       HelHUG.DB,
                       HelHUG.DB.Attribute
  other-extensions:    DataKinds,
                       FlexibleInstances,
                       FunctionalDependencies,
                       GADTs,
                       KindSignatures,
                       OverloadedStrings,
                       PolyKinds,
                       RankNTypes,
                       RecordWildCards,
                       TemplateHaskell,
                       TupleSections,
                       TypeFamilies,
                       TypeOperators,
                       TypeSynonymInstances,
                       UndecidableInstances
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.8,
                       aeson,
                       bytestring,
                       containers,
                       mtl,
                       singletons,
                       text,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
